frontend/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&family=Roboto&family=Ubuntu:wght@300;400&display=swap");

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    font-family: "Manrope", sans-serif;
}

.sticky__header {
    width: 100%;
    height: 8cqmax;
    position: sticky;
    top: 0;
    left: 0;
    z-index: 99999;
    box-shadow: 3px 3px -8px 3px #ddd;
    backdrop-filter: blur(5px);
}

@media only screen and (max-width: 768px) {
    .navigation {
        margin-left: 0;
        width: 100%;
        height: 100%;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 100;
        background: #00000084;
        display: none;
    }

    .menu {
        width: 15rem;
        height: 100%;
        position: absolute;
        top: 0;
        right: 0;
        background: #fff;
        z-index: 200;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        line-height: 30px;
    }

    .show__menu {
        display: block;
    }
}

